fix small horizontal scroll

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,3 +1,7 @@
+.catalog {
+  overflow-x: hidden;
+}
+
 .catalog__additional {
   @include mobile-padding;
 }
