--- a/source/sass/blocks/form-page.scss
+++ b/source/sass/blocks/form-page.scss
@@ -1,5 +1,6 @@
 .form-page {
   padding-top: 18px;
+  overflow-x: hidden;
 }
 
 .form-page__title {
